src/test/deca/context/invalid/Obj/decl-class-boolean.deca
// Description:
//    Déclaration d'une classe boolean
//
// Résultat:
//Une autre classe du même nom a déjà été définie
//
class boolean {}
{}